# woodtools

./: .gitignore  README.md  pyproject.toml
src/woodtools/dataloading/: __init__.py  regex.py
src/woodtools/pipeline/: __init__.py  backinit.py  dataselector.py  pathing.py  roiselector.py  rotations.py  state.py  transforms.py
src/woodtools/plotting/: __init__.py
